--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "author": "jiangjiang",
   "license": "ISC",
-  "script": {
-    "start": "app.js"
+  "scripts": {
+    "start": "node app.js"
   }
 }
