--- a/package.json
+++ b/package.json
@@ -4,27 +4,26 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "cors": "^2.8.4",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "body-parser": "^1.18.3",
     "mysql": "^2.15.0",
+    "object-assign": "^4.1.1",
     "qs": "^6.5.2",
-    "sweetalert": "^2.1.0",
-    "session": "^0.1.0"
+    "session": "^0.1.0",
+    "sweetalert": "^2.1.0"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
     "url": "https://git.sinacloud.com/pureshop"
   },
   "author": "jiangjiang",
-  "license": "ISC",
-  "scripts": {
-    "start": "node app.js"
-  }
+  "license": "ISC"
 }
