--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
-    "cookie-parser": "^1.4.3",
+    "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
-    "body-parser": "^1.18.3",
     "mysql": "^2.15.0",
     "object-assign": "^4.1.1",
-    "qs": "^6.5.2",
     "session": "^0.1.0",
-    "sweetalert": "^2.1.0"
+    "sweetalert": "^2.1.0",
+    "qs": "^6.5.2",
+    "cookie-parser": "^1.4.3"
   },
   "devDependencies": {},
   "scripts": {
@@ -22,7 +22,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://git.sinacloud.com/pureshop"
+    "url": "\thttps://git.sinacloud.com/pureshop"
   },
   "author": "jiangjiang",
   "license": "ISC"
